Make text fit on homepage buttons

--- a/autosportlabs/racecapture/menu/homepageview.kv
+++ b/autosportlabs/racecapture/menu/homepageview.kv
@@ -12,6 +12,7 @@
 	BoxLayout:
 		orientation: 'horizontal'
 		BoxLayout:
+			size_hint_x: 0.7
 			orientation: 'vertical'
 			AnchorLayout:
 				size_hint: 1.0, 0.1
