--- a/autosportlabs/racecapture/views/configuration/rcp/analogchannelsview.kv
+++ b/autosportlabs/racecapture/views/configuration/rcp/analogchannelsview.kv
@@ -37,6 +37,21 @@
             id: sr
             size_hint: (1.0,0.3)
         HSeparator:
+            text: 'Filter'
+        GridLayout:
+            size_hint: (1.0, 0.2)
+            cols: 2
+            FieldLabel:
+                text: 'Filter'
+                font_size: sp(17)
+                halign: 'right'
+                size_hint: (1.0,0.3)
+            FloatValueField:
+                id: alpha
+                on_text: root.on_alpha_map_value(*args)
+                halign: 'left'
+                size_hint: (1.0,0.3)
+        HSeparator:
             text: 'Mode'
 	    GridLayout:
 	        size_hint: (1.0, 0.5)
